[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2018"
name = "renec-accounts-cluster-bench"
version = "1.8.14"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.4.1"
renec-account-decoder = { path = "../account-decoder", version = "=1.8.14" }
renec-clap-utils = { path = "../clap-utils", version = "=1.8.14" }
renec-client = { path = "../client", version = "=1.8.14" }
renec-core = { path = "../core", version = "=1.8.14" }
renec-faucet = { path = "../faucet", version = "=1.8.14" }
solana-gossip = { path = "../gossip", version = "=1.8.14" }
renec-logger = { path = "../logger", version = "=1.8.14" }
solana-measure = { path = "../measure", version = "=1.8.14" }
solana-net-utils = { path = "../net-utils", version = "=1.8.14" }
solana-runtime = { path = "../runtime", version = "=1.8.14" }
solana-sdk = { path = "../sdk", version = "=1.8.14" }
solana-streamer = { path = "../streamer", version = "=1.8.14" }
solana-transaction-status = { path = "../transaction-status", version = "=1.8.14" }
renec-version = { path = "../version", version = "=1.8.14" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-local-cluster = { path = "../local-cluster", version = "=1.8.14" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
