[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2018"
name = "solana-accountsdb-plugin-interface"
description = "The Solana AccountsDb plugin interface."
version = "1.8.14"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/solana-accountsdb-plugin-interface"

[dependencies]
log = "0.4.11"
thiserror = "1.0.29"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
