[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2018"
name = "renec-accountsdb-plugin-manager"
description = "The RENEC AccountsDb plugin manager."
version = "1.8.14"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-validator"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.4"
libloading = "0.7.0"
log = "0.4.11"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.67"
renec-accountsdb-plugin-interface = { path = "../accountsdb-plugin-interface", version = "=1.8.14" }
renec-logger = { path = "../logger", version = "=1.8.14" }
renec-measure = { path = "../measure", version = "=1.8.14" }
renec-metrics = { path = "../metrics", version = "=1.8.14" }
renec-rpc = { path = "../rpc", version = "=1.8.14" }
renec-runtime = { path = "../runtime", version = "=1.8.14" }
renec-sdk = { path = "../sdk", version = "=1.8.14" }
thiserror = "1.0.21"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
