[package]
name = "renec-banks-client"
version = "1.8.14"
description = "RENEC banks client"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-banks-client"
edition = "2018"

[dependencies]
bincode = "1.3.1"
borsh = "0.9.0"
borsh-derive = "0.9.0"
futures = "0.3"
mio = "0.7.6"
renec-banks-interface = { path = "../banks-interface", version = "=1.8.14" }
solana-program = { path = "../sdk/program", version = "=1.8.14" }
solana-sdk = { path = "../sdk", version = "=1.8.14" }
tarpc = { version = "0.24.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[dev-dependencies]
solana-runtime = { path = "../runtime", version = "=1.8.14" }
solana-banks-server = { path = "../banks-server", version = "=1.8.14" }

[lib]
crate-type = ["lib"]
name = "renec_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
