[package]
name = "solana-banks-interface"
version = "1.10.0"
description = "Solana banks RPC interface"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/solana-banks-interface"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
solana-sdk = { path = "../sdk", version = "=1.10.0" }
tarpc = { version = "0.27.2", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
