[package]
name = "solana-banks-interface"
version = "1.8.14"
description = "RENEC banks RPC interface"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/solana-banks-interface"
edition = "2018"

[dependencies]
mio = "0.7.6"
serde = { version = "1.0.122", features = ["derive"] }
solana-sdk = { path = "../sdk", version = "=1.8.14" }
tarpc = { version = "0.24.1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
