[package]
name = "renec-banks-server"
version = "1.8.14"
description = "RENEC banks server"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-banks-server"
edition = "2018"

[dependencies]
bincode = "1.3.1"
futures = "0.3"
log = "0.4.11"
mio = "0.7.6"
renec-banks-interface = { path = "../banks-interface", version = "=1.8.14" }
renec-runtime = { path = "../runtime", version = "=1.8.14" }
renec-sdk = { path = "../sdk", version = "=1.8.14" }
renec-metrics = { path = "../metrics", version = "=1.8.14" }
tarpc = { version = "0.24.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "renec_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
