[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2018"
name = "renec-bench-streamer"
version = "1.8.14"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
publish = false

[dependencies]
clap = "2.33.1"
renec-clap-utils = { path = "../clap-utils", version = "=1.8.14" }
renec-streamer = { path = "../streamer", version = "=1.8.14" }
renec-logger = { path = "../logger", version = "=1.8.14" }
renec-net-utils = { path = "../net-utils", version = "=1.8.14" }
renec-version = { path = "../version", version = "=1.8.14" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
