[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2018"
name = "solana-bench-tps"
version = "1.8.14"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
publish = false

[dependencies]
bincode = "1.3.1"
clap = "2.33.1"
log = "0.4.11"
rayon = "1.5.0"
serde_json = "1.0.56"
serde_yaml = "0.8.13"
renec-clap-utils = { path = "../clap-utils", version = "=1.8.14" }
solana-core = { path = "../core", version = "=1.8.14" }
renec-genesis = { path = "../genesis", version = "=1.8.14" }
renec-client = { path = "../client", version = "=1.8.14" }
renec-faucet = { path = "../faucet", version = "=1.8.14" }
solana-gossip = { path = "../gossip", version = "=1.8.14" }
renec-logger = { path = "../logger", version = "=1.8.14" }
solana-metrics = { path = "../metrics", version = "=1.8.14" }
solana-measure = { path = "../measure", version = "=1.8.14" }
solana-net-utils = { path = "../net-utils", version = "=1.8.14" }
solana-runtime = { path = "../runtime", version = "=1.8.14" }
solana-sdk = { path = "../sdk", version = "=1.8.14" }
solana-streamer = { path = "../streamer", version = "=1.8.14" }
renec-version = { path = "../version", version = "=1.8.14" }

[dev-dependencies]
serial_test = "0.4.0"
solana-local-cluster = { path = "../local-cluster", version = "=1.8.14" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
