[package]
name = "renec-bloom"
version = "1.8.14"
description = "RENEC bloom filter"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-bloom"
edition = "2018"

[dependencies]
bv = { version = "0.11.1", features = ["serde"] }
fnv = "1.0.7"
rand = "0.7.0"
serde = { version = "1.0.133", features = ["rc"] }
rayon = "1.5.1"
serde_derive = "1.0.103"
renec-frozen-abi = { path = "../frozen-abi", version = "=1.8.14" }
renec-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.8.14" }
renec-sdk = { path = "../sdk", version = "=1.8.14" }
log = "0.4.14"

[lib]
crate-type = ["lib"]
name = "renec_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
