[package]
name = "renec-clap-utils"
version = "1.8.14"
description = "RENEC utilities for the clap"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-clap-utils"
edition = "2018"

[dependencies]
clap = "2.33.0"
rpassword = "4.0"
solana-perf = { path = "../perf", version = "=1.8.14" }
solana-remote-wallet = { path = "../remote-wallet", version = "=1.8.14" }
solana-sdk = { path = "../sdk", version = "=1.8.14" }
thiserror = "1.0.21"
tiny-bip39 = "0.8.1"
uriparse = "0.6.3"
url = "2.1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.1.0"

[lib]
name = "renec_clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
