[package]
name = "renec-client"
version = "1.8.14"
description = "RENEC Client"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-client"
license = "Apache-2.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
bincode = "1.3.1"
bs58 = "0.3.1"
clap = "2.33.0"
indicatif = "0.15.0"
jsonrpc-core = "18.0.0"
log = "0.4.11"
net2 = "0.2.37"
rayon = "1.5.0"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "0.11.0"
serde = "1.0.122"
serde_derive = "1.0.103"
serde_json = "1.0.56"
renec-account-decoder = { path = "../account-decoder", version = "=1.8.14" }
renec-clap-utils = { path = "../clap-utils", version = "=1.8.14" }
renec-faucet = { path = "../faucet", version = "=1.8.14" }
renec-net-utils = { path = "../net-utils", version = "=1.8.14" }
renec-sdk = { path = "../sdk", version = "=1.8.14" }
solana-transaction-status = { path = "../transaction-status", version = "=1.8.14" }
renec-version = { path = "../version", version = "=1.8.14" }
renec-vote-program = { path = "../programs/vote", version = "=1.8.14" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.10.1"
url = "2.1.1"

[dev-dependencies]
assert_matches = "1.3.0"
jsonrpc-http-server = "18.0.0"
renec-logger = { path = "../logger", version = "=1.8.14" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
