[package]
name = "renec-download-utils"
version = "1.8.14"
description = "RENEC Download Utils"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-download-utils"
edition = "2018"

[dependencies]
bzip2 = "0.3.3"
console = "0.14.1"
indicatif = "0.15.0"
log = "0.4.11"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
solana-sdk = { path = "../sdk", version = "=1.8.14" }
renec-runtime = { path = "../runtime", version = "=1.8.14" }
tar = "0.4.37"

[lib]
crate-type = ["lib"]
name = "renec_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
