[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2018"
name = "renec-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
version = "1.8.14"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-ledger-tool"

[dependencies]
bs58 = "0.3.1"
bytecount = "0.6.0"
clap = "2.33.1"
csv = "1.1.3"
dashmap = "4.0.2"
futures = "0.3.8"
futures-util = "0.3.5"
histogram = "*"
itertools = "0.9.0"
log = { version = "0.4.11" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
serde_yaml = "0.8.13"
renec-clap-utils = { path = "../clap-utils", version = "=1.8.14" }
renec-cli-output = { path = "../cli-output", version = "=1.8.14" }
renec-core = { path = "../core", version = "=1.8.14" }
renec-ledger = { path = "../ledger", version = "=1.8.14" }
renec-logger = { path = "../logger", version = "=1.8.14" }
renec-measure = { path = "../measure", version = "=1.8.14" }
renec-runtime = { path = "../runtime", version = "=1.8.14" }
renec-sdk = { path = "../sdk", version = "=1.8.14" }
renec-stake-program = { path = "../programs/stake", version = "=1.8.14" }
solana-storage-bigtable = { path = "../storage-bigtable", version = "=1.8.14" }
solana-transaction-status = { path = "../transaction-status", version = "=1.8.14" }
renec-version = { path = "../version", version = "=1.8.14" }
renec-vote-program = { path = "../programs/vote", version = "=1.8.14" }
tempfile = "3.1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"

[target."cfg(unix)".dependencies]
signal-hook = "0.1.15"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
