[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2018"
name = "renec-local-cluster"
description = "Blockchain, Rebuilt for Scale"
version = "1.8.14"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-local-cluster"

[dependencies]
crossbeam-channel = "0.4"
itertools = "0.9.0"
gag = "1.0.0"
fs_extra = "1.2.0"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.0"
renec-config-program = { path = "../programs/config", version = "=1.8.14" }
renec-core = { path = "../core", version = "=1.8.14" }
renec-client = { path = "../client", version = "=1.8.14" }
renec-download-utils = { path = "../download-utils", version = "=1.8.14" }
renec-exchange-program = { path = "../programs/exchange", version = "=1.8.14" }
renec-faucet = { path = "../faucet", version = "=1.8.14" }
renec-gossip = { path = "../gossip", version = "=1.8.14" }
renec-ledger = { path = "../ledger", version = "=1.8.14" }
renec-logger = { path = "../logger", version = "=1.8.14" }
solana-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.8.14" }
solana-rpc = { path = "../rpc", version = "=1.8.14" }
solana-runtime = { path = "../runtime", version = "=1.8.14" }
solana-sdk = { path = "../sdk", version = "=1.8.14" }
renec-stake-program = { path = "../programs/stake", version = "=1.8.14" }
solana-streamer = { path = "../streamer", version = "=1.8.14" }
renec-vote-program = { path = "../programs/vote", version = "=1.8.14" }
tempfile = "3.1.0"

[dev-dependencies]
assert_matches = "1.3.0"
serial_test = "0.4.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
