[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
edition = "2021"
name = "solana-log-analyzer"
description = "The solana cluster network analysis tool"
version = "1.10.0"
license = "Apache-2.0"
homepage = "https://remitano.com/"
publish = false

[dependencies]
byte-unit = "4.0.13"
clap = "2.33.1"
serde = "1.0.136"
serde_json = "1.0.78"
solana-logger = { path = "../logger", version = "=1.10.0" }
renec-version = { path = "../version", version = "=1.10.0" }

[[bin]]
name = "solana-log-analyzer"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
