[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2018"
name = "renec-log-analyzer"
description = "The RENEC cluster network analysis tool"
version = "1.8.14"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
publish = false

[dependencies]
byte-unit = "4.0.9"
clap = "2.33.1"
serde = "1.0.122"
serde_json = "1.0.56"
renec-clap-utils = { path = "../clap-utils", version = "=1.8.14" }
renec-logger = { path = "../logger", version = "=1.8.14" }
renec-version = { path = "../version", version = "=1.8.14" }

[[bin]]
name = "renec-log-analyzer"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
