[package]
name = "renec-logger"
version = "1.8.14"
description = "RENEC Logger"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-logger"
edition = "2018"

[dependencies]
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.11"

[lib]
name = "renec_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
