[package]
name = "renec-measure"
description = "Blockchain, Rebuilt for Scale"
version = "1.8.14"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-measure"
readme = "../README.md"
repository = "https://github.com/remitano/renec"
authors = ["RENEC Maintainers <dev@remitano.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.11"
solana-sdk = { path = "../sdk", version = "=1.8.14" }
solana-metrics = { path = "../metrics", version = "=1.8.14" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
