[package]
name = "renec-metrics"
version = "1.8.14"
description = "RENEC Metrics"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-metrics"
edition = "2018"

[dependencies]
env_logger = "0.8.3"
gethostname = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.11"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
renec-sdk = { path = "../sdk", version = "=1.8.14" }

[dev-dependencies]
rand = "0.7.0"
serial_test = "0.4.0"

[lib]
name = "renec_metrics"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
