[package]
name = "solana-notifier"
version = "1.8.14"
description = "RENEC Notifier"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/solana-notifier"
edition = "2018"

[dependencies]
log = "0.4.11"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0"

[lib]
name = "solana_notifier"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
