[package]
name = "renec-perf"
version = "1.8.14"
description = "RENEC Performance APIs"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-perf"
edition = "2018"

[dependencies]
bincode = "1.3.1"
curve25519-dalek = { version = "2" }
ahash = "0.7.6"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.0"
serde = "1.0.126"
renec-logger = { path = "../logger", version = "=1.8.14" }
renec-metrics = { path = "../metrics", version = "=1.8.14" }
renec-sdk = { path = "../sdk", version = "=1.8.14" }
renec-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.8.14" }
renec-bloom = { path = "../bloom", version = "=1.8.14" }
renec-vote-program = { path = "../programs/vote", version = "=1.8.14" }

[target."cfg(target_os = \"linux\")".dependencies]
caps = "0.5.3"
libc = "0.2.81"
nix = "0.20.0"

[lib]
name = "renec_perf"

[dev-dependencies]
matches = "0.1.6"

[[bench]]
name = "sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
