[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2018"
name = "solana-poh-bench"
version = "1.8.14"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/solana-poh-bench"

[dependencies]
clap = "2.33.1"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.0"
renec-logger = { path = "../logger", version = "=1.8.14" }
renec-ledger = { path = "../ledger", version = "=1.8.14" }
solana-sdk = { path = "../sdk", version = "=1.8.14" }
renec-clap-utils = { path = "../clap-utils", version = "=1.8.14" }
renec-measure = { path = "../measure", version = "=1.8.14" }
renec-version = { path = "../version", version = "=1.8.14" }
renec-perf = { path = "../perf", version = "=1.8.14" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
