[package]
name = "renec-poh"
version = "1.8.14"
description = "RENEC PoH"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-poh"
edition = "2018"

[dependencies]
core_affinity = "0.5.10"
crossbeam-channel = "0.4"
log = "0.4.11"
renec-ledger = { path = "../ledger", version = "=1.8.14" }
renec-measure = { path = "../measure", version = "=1.8.14" }
solana-metrics = { path = "../metrics", version = "=1.8.14" }
renec-runtime = { path = "../runtime", version = "=1.8.14" }
solana-sdk = { path = "../sdk", version = "=1.8.14" }
renec-sys-tuner = { path = "../sys-tuner", version = "=1.8.14" }
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3.1"
matches = "0.1.6"
rand = "0.7.0"
renec-logger = { path = "../logger", version = "=1.8.14" }
renec-perf = { path = "../perf", version = "=1.8.14" }

[lib]
crate-type = ["lib"]
name = "renec_poh"

[[bench]]
name = "poh"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
