[package]
name = "solana-rayon-threadlimit"
version = "1.10.0"
description = "solana-rayon-threadlimit"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/solana-rayon-threadlimit"
readme = "../README.md"
repository = "https://github.com/remitano/renec"
authors = ["RENEC Maintainers <dev@remitano.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
num_cpus = "1.13.1"
lazy_static = "1.4.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
